--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="style.css">
-        <title>My Site Title</title>
-   </head>
-    <body>  
-        My first website
-    </body>
+       <link rel="stylesheet" href="style.css">
+       <title>My Site Title</title>
+     </head>
+     <body>
+       <h1>My first website</h1>
+       <p>valid</p>
+     </body>
 </html>
